--- a/css/TTL-Branded-d3-Pie-Chart.css
+++ b/css/TTL-Branded-d3-Pie-Chart.css
@@ -1,17 +1,14 @@
 div.legend{
     position: absolute;
 }
-div legend.ul{
+div.legend ul{
     list-style-type: none;
 }
-div.legend ul li{
-    display: inline;
-}
-div.legend.w{
+div.legend.e{
     right: 0;
     top: 0;
 }
-div.legend.e{
+div.legend.w{
     left: 0;
     top: 0;
 }
